syntax = "proto3";

package proto;

//角色位置
message role_pos{
	float x = 1;
	float y = 2;
	float z = 3;
}

//角色信息
message role_base_info{
	string name = 1;	//名字
	uint32 level = 2;	//等级
	int32 map_id = 3;	//地图id
	uint32 exp = 4;		//经验
}

//客户端请求进入服务器
message req_enter_gs{	
	string	token = 1;	//令牌
	string	roleId = 2;	//要选择的角色
}

//
message rsp_enter_gs{
	int32	retCode = 1;
}






